assert(_thread == Thread::current()->osthread()) failed: The PromotionFailedInfo should be thread local.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b43

        With fastdebug build

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/HUDSON/workspace/9-2-build-linux-amd64/jdk9/1085/hotspot/src/share/vm/gc_implementation/shared/copyFailedInfo.hpp:76), pid=27392, tid=140119803168512
        # assert(_thread == Thread::current()->osthread()) failed: The PromotionFailedInfo should be thread local.
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0-b26) (build 1.9.0-ea-fastdebug-b26)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-fastdebug-b26 mixed mode linux-amd64 compressed oops)

        java -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -d64 -XX:+UseConcMarkSweepGC -Xmx512m -XX:+ParallelRefProcEnabled -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:-PrintGCCause -showversion -Xms128m -Xmx256m -jar GCBasher.jar -time:300000

              Assignee:
              Sangheon Kim (Inactive)
              Reporter:
              Jon Masamitsu (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: