8055239: assert(_thread == Thread::current()->osthread()) failed: The PromotionFailedInfo should be thread local

Changed to trace and reset before second use of PromotionFailedInfo.

Reviewed-by: jmasa, brutisso, kbarrett